[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/UI/BorderUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://tiles/UI/remove.png" type="Texture" id=2]
[ext_resource path="res://tiles/UI/remove_press.png" type="Texture" id=3]
[ext_resource path="res://tiles/UI/up.png" type="Texture" id=4]
[ext_resource path="res://tiles/font/game_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/TowerSelectUI.gd" type="Script" id=6]
[ext_resource path="res://tiles/UI/up_press.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="TowerSelectUI" type="Node2D"]
z_index = 2
script = ExtResource( 6 )

[node name="Border" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 2, -65535, 2, 1, -65534, 2, 1, -65533, 2, 2, -65532, 2, 2, -65531, 2, 2, -65530, 2, 2, -65529, 2, 3, 65535, 2, 65536, 0, 2, 65537, 1, 2, 131073, 2, 2, 65538, 3, 2, 131073, 4, 2, 65537, 5, 2, 65538, 6, 2, 131074, 7, 2, 131075, 131071, 2, 131072, 65536, 2, 131073, 65537, 2, 65538, 65538, 2, 65538, 65539, 2, 65537, 65540, 2, 131073, 65541, 2, 65537, 65542, 2, 65537, 65543, 2, 65539, 196607, 2, 196608, 131072, 2, 196610, 131073, 2, 196609, 131074, 2, 196609, 131075, 2, 196610, 131076, 2, 196610, 131077, 2, 196609, 131078, 2, 196610, 131079, 2, 196611 )

[node name="Remove" type="Area2D" parent="."]
position = Vector2( -4, 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Remove"]
position = Vector2( 18, -2 )
shape = SubResource( 1 )

[node name="Button" type="Sprite" parent="Remove/CollisionShape2D"]
position = Vector2( -1.90735e-06, 1.90735e-06 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="ButtonPressed" type="Sprite" parent="Remove/CollisionShape2D"]
visible = false
position = Vector2( -1.90735e-06, 1.90735e-06 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )

[node name="ResetClickSprite" type="Timer" parent="Remove"]
wait_time = 0.1

[node name="Up" type="Area2D" parent="."]
position = Vector2( 60, -52 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2( 8, 72 )
shape = SubResource( 1 )

[node name="Button" type="Sprite" parent="Up/CollisionShape2D"]
position = Vector2( -1.90735e-06, 0 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="ButtonPressed" type="Sprite" parent="Up/CollisionShape2D"]
visible = false
position = Vector2( -1.90735e-06, 1.90735e-06 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 8 )

[node name="Value" type="Label" parent="Up"]
margin_left = 40.0
margin_top = 60.0
margin_right = 79.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 5 )
text = "200"

[node name="ResetClickSprite" type="Timer" parent="Up"]
wait_time = 0.1

[connection signal="input_event" from="Remove" to="." method="_on_Remove_input_event"]
[connection signal="timeout" from="Remove/ResetClickSprite" to="." method="_on_RemoveResetClickSprite_timeout"]
[connection signal="input_event" from="Up" to="." method="_on_Up_input_event"]
[connection signal="timeout" from="Up/ResetClickSprite" to="." method="_on_UpResetClickSprite_timeout"]
